--- a/index.html
+++ b/index.html
@@ -1826,7 +1826,7 @@ Go to <a href="#acronyms">Acronyms</a>
 </table>
 <br/>
 
-Go to <a href="#acronyms">Acronyms</a>
+Go to <a href="#">Top</a>
 , <a href="#ports">Ports</a>
  or  <a href="#services">Services</a>
 <br/>
