--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,7 @@ Go to <a href="#ports">Ports</a>
 
 
 <h2 id="ports"><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/List_of_TCP_and_UDP_port_numbers">Ports</a></h2>
-Go to <a href="#acronyms">Acronyms</a>
+Go to <a href="#">Top</a>
  or <a href="#services">Services</a>
 <br/>
 <br/>
@@ -1636,7 +1636,7 @@ Go to <a href="#acronyms">Acronyms</a>
 </br>
 
 <h2 id="services"><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Network_service#Examples">Services / Protocols</a></h2>
-Go to <a href="#acronyms">Acronyms</a>
+Go to <a href="#">Top</a>
  or <a href="#ports">Ports</a>
 <br/>
 <br/>
