--- a/index.html
+++ b/index.html
@@ -1223,6 +1223,12 @@ Go to <a href="#ports">Ports</a>
 
    </tr>
    <tr>
+      <td>SPI</td>
+      <td><p class="changeColor">Stateful Packet Inspection</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Stateful_firewall">wikipedia</a></td>
+
+   </tr>
+   <tr>
       <td>SQL</td>
       <td><p class="changeColor">Structured Query Language</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/SQL">wikipedia</a></td>
