--- a/index.html
+++ b/index.html
@@ -1548,7 +1548,7 @@ Go to <a href="#">Top</a>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Internet_Message_Access_Protocol">wikipedia</a></td>
    </tr>
    <tr>
-      <td>TCP 161</td>
+      <td>UDP 161</td>
       <td><p class="changeColor">SNMP Simple Network Management Protocol</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Simple_Network_Management_Protocol">wikipedia</a></td>
    </tr>
@@ -1740,7 +1740,7 @@ Go to <a href="#">Top</a>
    </tr>
    <tr>
       <td>SNMP Simple Network Management Protocol</td>
-      <td><p class="changeColor">TCP 161</p></td>
+      <td><p class="changeColor">UDP 161</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Simple_Network_Management_Protocol">wikipedia</a></td>
    </tr>
    <tr>
