--- a/index.html
+++ b/index.html
@@ -1361,7 +1361,7 @@ Go to <a href="#ports">Ports</a>
 
    </tr>
    <tr>
-      <td>VDINDE</td>
+      <td>VDI/VDE</td>
       <td><p class="changeColor">Virtual Desktop Infrastructure or Virtual Desktop Environment</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Desktop_virtualization#Virtual_desktop_infrastructure">wikipedia</a></td>
 
