added link further readings

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <h1 id="acronyms">Comptia Security+ Acronyms, Ports and Services</h1>
 
 Go to <a href="#ports">Ports</a>
- or <a href="#services">Services</a>
+, <a href="#services">Services</a>
+ or <a href="#readings">further Readings</a>
 <br/>
 <br/>
 
@@ -1452,7 +1453,8 @@ Go to <a href="#ports">Ports</a>
 
 <h2 id="ports"><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/List_of_TCP_and_UDP_port_numbers">Ports</a></h2>
 Go to <a href="#">Top</a>
- or <a href="#services">Services</a>
+, <a href="#services">Services</a>
+ or <a href="#readings">further Readings</a>
 <br/>
 <br/>
 
@@ -1643,7 +1645,8 @@ Go to <a href="#">Top</a>
 
 <h2 id="services"><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Network_service#Examples">Services / Protocols</a></h2>
 Go to <a href="#">Top</a>
- or <a href="#ports">Ports</a>
+, <a href="#ports">Ports</a>
+ or <a href="#readings">further Readings</a>
 <br/>
 <br/>
 
@@ -1834,7 +1837,8 @@ Go to <a href="#">Top</a>
 
 Go to <a href="#">Top</a>
 , <a href="#ports">Ports</a>
- or  <a href="#services">Services</a>
+, <a href="#services">Services</a>
+ or <a href="#readings">further Readings</a>
 <br/>
 <br/>
 
@@ -1842,6 +1846,8 @@ Go to <a href="#">Top</a>
 <a target="_blank" rel="noopener noreferrer" href="https://www.comptia.org/certifications/security">Comptia Security+</a>
 <br/>
 <a target="_blank" rel="noopener noreferrer" href="https://www.comptia.jp/pdf/Security%2B%20SY0-501%20Exam%20Objectives.pdf">Comptia Security+ Exam Objectives</a>
+<br/>
+<a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Authentication_protocol">Authentication Protocols</a>
 <br/>
 <a target="_blank" rel="noopener noreferrer" href="https://www.professormesser.com/security-plus/sy0-501/sy0-501-training-course">Professor Messer's Comptia Security+ Free Course</a>
 <br/>
