--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-   <title>Comptia Sec+ Acronyms, Ports and Services</title>
-   <meta name="description" content="Comptia Security+ sec+ security plus SY0-501 acronyms ports services">
-   <meta name="keywords" content="Comptia Security+ sec+ security plus SY0-501 acronyms ports services">
+   <title>CompTIA Sec+ SY0-501 Acronyms, Ports and Services</title>
+   <meta name="description" content="Learn CompTIA Security+ SY0-501 acronyms, ports and services for the exam.">
+   <meta name="keywords" content="CompTIA Security+ SY0-501 sec+ security plus acronyms ports services practice exam learn exercise">
    <style>
       p.changeColor{
          color: #FFFFFF;
@@ -15,7 +15,7 @@
    <script data-ad-client="ca-pub-2139938195662657" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
-<h1 id="acronyms">Comptia Security+ Acronyms, Ports and Services</h1>
+<h1 id="acronyms">CompTIA Security+ SY0-501 Acronyms, Ports and Services</h1>
 
 Go to <a href="#ports">Ports</a>
 , <a href="#services">Services</a>
@@ -1843,15 +1843,15 @@ Go to <a href="#">Top</a>
 <br/>
 
 <h2 id="readings">Further Readings</h2>
-<a target="_blank" rel="noopener noreferrer" href="https://www.comptia.org/certifications/security">Comptia Security+</a>
+<a target="_blank" rel="noopener noreferrer" href="https://www.comptia.org/certifications/security">CompTIA Security+</a>
 <br/>
-<a target="_blank" rel="noopener noreferrer" href="https://www.comptia.jp/pdf/Security%2B%20SY0-501%20Exam%20Objectives.pdf">Comptia Security+ Exam Objectives</a>
+<a target="_blank" rel="noopener noreferrer" href="https://www.comptia.jp/pdf/Security%2B%20SY0-501%20Exam%20Objectives.pdf">CompTIA Security+ Exam Objectives</a>
 <br/>
 <a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Authentication_protocol">Authentication Protocols</a>
 <br/>
-<a target="_blank" rel="noopener noreferrer" href="https://www.professormesser.com/security-plus/sy0-501/sy0-501-training-course">Professor Messer's Comptia Security+ Free Course</a>
+<a target="_blank" rel="noopener noreferrer" href="https://www.professormesser.com/security-plus/sy0-501/sy0-501-training-course">Professor Messer's CompTIA Security+ Free Course</a>
 <br/>
-<a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=kaFl9Bo5100&list=PLG49S3nxzAnkijp3VBQ5CPf19bK-5hmec">Professor Messer's Comptia Security+ Study Group</a>
+<a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=kaFl9Bo5100&list=PLG49S3nxzAnkijp3VBQ5CPf19bK-5hmec">Professor Messer's CompTIA Security+ Study Group</a>
 
 <br/>
 <br/>
