--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <title>CompTIA Sec+ SY0-501 Acronyms, Ports and Services</title>
    <meta name="description" content="Learn CompTIA Security+ SY0-501 acronyms, ports and services for the exam.">
-   <meta name="keywords" content="CompTIA Security+ SY0-501 sec+ security plus acronyms ports services practice exam learn exercise">
+   <meta name="keywords" content="CompTIA Security+ SY0-501 sec+ security plus acronyms ports services memorize practice exam learn exercise">
    <style>
       p.changeColor{
          color: #FFFFFF;
