--- a/index.html
+++ b/index.html
@@ -324,6 +324,12 @@ Go to <a href="#ports">Ports</a>
 
    </tr>
    <tr>
+      <td>DRP</td>
+      <td><p class="changeColor">Disaster Recovery Plan (IT)</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Disaster_recovery_and_business_continuity_auditing">wikipedia</a></td>
+
+   </tr>
+   <tr>
       <td>DSA</td>
       <td><p class="changeColor">Digital Signature Algorithm</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Digital_Signature_Algorithm">wikipedia</a></td>
