--- a/index.html
+++ b/index.html
@@ -696,15 +696,15 @@ Go to <a href="#ports">Ports</a>
 
    </tr>
    <tr>
-      <td>MDF</td>
-      <td><p class="changeColor">Multi-Function Devices</p></td>
-      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Multi-function_printer">wikipedia</a></td>
-
-   </tr>
-   <tr>
       <td>MDM</td>
       <td><p class="changeColor">Mobile Device Management</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Mobile_device_management">wikipedia</a></td>
+
+   </tr>
+   <tr>
+      <td>MFD</td>
+      <td><p class="changeColor">Multi-Function Devices</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Multi-function_printer">wikipedia</a></td>
 
    </tr>
    <tr>
