--- a/index.html
+++ b/index.html
@@ -1855,6 +1855,8 @@ Go to <a href="#">Top</a>
 <br/>
 <a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Authentication_protocol">Authentication Protocols</a>
 <br/>
+<a target="_blank" rel="noopener noreferrer" href="https://www.reddit.com/r/CompTIA/comments/aync35/heres_my_braindump_on_the_comptia_sy0501_security">Braindump</a>
+<br/>
 <a target="_blank" rel="noopener noreferrer" href="https://www.professormesser.com/security-plus/sy0-501/sy0-501-training-course">Professor Messer's CompTIA Security+ Free Course</a>
 <br/>
 <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=kaFl9Bo5100&list=PLG49S3nxzAnkijp3VBQ5CPf19bK-5hmec">Professor Messer's CompTIA Security+ Study Group</a>
