reference to sec+ / net+

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 Go to <a href="#ports">Ports</a>
 , <a href="#services">Services</a>
- or <a href="#readings">further Readings</a>
+, <a href="#readings">further Readings</a>
+ or <a href="https://scubido.github.io/network+">Network+</a>
 <br/>
 <br/>
 
@@ -1460,7 +1461,8 @@ Go to <a href="#ports">Ports</a>
 <h2 id="ports"><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/List_of_TCP_and_UDP_port_numbers">Ports</a></h2>
 Go to <a href="#">Top</a>
 , <a href="#services">Services</a>
- or <a href="#readings">further Readings</a>
+, <a href="#readings">further Readings</a>
+ or <a href="https://scubido.github.io/network+">Network+</a>
 <br/>
 <br/>
 
@@ -1652,7 +1654,8 @@ Go to <a href="#">Top</a>
 <h2 id="services"><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Network_service#Examples">Services / Protocols</a></h2>
 Go to <a href="#">Top</a>
 , <a href="#ports">Ports</a>
- or <a href="#readings">further Readings</a>
+, <a href="#readings">further Readings</a>
+ or <a href="https://scubido.github.io/network+">Network+</a>
 <br/>
 <br/>
 
@@ -1844,7 +1847,8 @@ Go to <a href="#">Top</a>
 Go to <a href="#">Top</a>
 , <a href="#ports">Ports</a>
 , <a href="#services">Services</a>
- or <a href="#readings">further Readings</a>
+, <a href="#readings">further Readings</a>
+ or <a href="https://scubido.github.io/network+">Network+</a>
 <br/>
 <br/>
 
