--- a/network+/index.html
+++ b/network+/index.html
@@ -19,7 +19,8 @@
 
 Go to <a href="#ports">Ports</a>
 , <a href="#services">Services</a>
- or <a href="#readings">further Readings</a>
+, <a href="#readings">further Readings</a>
+ or <a href="https://scubido.github.io">Security+</a>
 <br/>
 <br/>
 
@@ -1663,7 +1664,8 @@ Go to <a href="#ports">Ports</a>
 <h2 id="ports"><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/List_of_TCP_and_UDP_port_numbers">Ports</a></h2>
 Go to <a href="#">Top</a>
 , <a href="#services">Services</a>
- or <a href="#readings">further Readings</a>
+, <a href="#readings">further Readings</a>
+ or <a href="https://scubido.github.io">Security+</a>
 <br/>
 <br/>
 
@@ -1855,7 +1857,8 @@ Go to <a href="#">Top</a>
 <h2 id="services"><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Network_service#Examples">Services / Protocols</a></h2>
 Go to <a href="#">Top</a>
 , <a href="#ports">Ports</a>
- or <a href="#readings">further Readings</a>
+, <a href="#readings">further Readings</a>
+ or <a href="https://scubido.github.io">Security+</a>
 <br/>
 <br/>
 
@@ -2047,7 +2050,8 @@ Go to <a href="#">Top</a>
 Go to <a href="#">Top</a>
 , <a href="#ports">Ports</a>
 , <a href="#services">Services</a>
- or <a href="#readings">further Readings</a>
+, <a href="#readings">further Readings</a>
+ or <a href="https://scubido.github.io">Security+</a>
 <br/>
 <br/>
 
