--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
 Go to <a href="#ports">Ports</a>
 , <a href="#services">Services</a>
-, <a href="#readings">further Readings</a>
- or <a href="https://scubido.github.io/network+">Network+</a>
+ or <a href="#readings">further Readings</a>
 <br/>
 <br/>
 
@@ -1461,8 +1460,7 @@ Go to <a href="#ports">Ports</a>
 <h2 id="ports"><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/List_of_TCP_and_UDP_port_numbers">Ports</a></h2>
 Go to <a href="#">Top</a>
 , <a href="#services">Services</a>
-, <a href="#readings">further Readings</a>
- or <a href="https://scubido.github.io/network+">Network+</a>
+ or <a href="#readings">further Readings</a>
 <br/>
 <br/>
 
@@ -1654,8 +1652,7 @@ Go to <a href="#">Top</a>
 <h2 id="services"><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Network_service#Examples">Services / Protocols</a></h2>
 Go to <a href="#">Top</a>
 , <a href="#ports">Ports</a>
-, <a href="#readings">further Readings</a>
- or <a href="https://scubido.github.io/network+">Network+</a>
+ or <a href="#readings">further Readings</a>
 <br/>
 <br/>
 
@@ -1847,8 +1844,7 @@ Go to <a href="#">Top</a>
 Go to <a href="#">Top</a>
 , <a href="#ports">Ports</a>
 , <a href="#services">Services</a>
-, <a href="#readings">further Readings</a>
- or <a href="https://scubido.github.io/network+">Network+</a>
+ or <a href="#readings">further Readings</a>
 <br/>
 <br/>
 
