--- a/network+/index.html
+++ b/network+/index.html
@@ -17,6 +17,10 @@
 <body>
 <h1 id="acronyms">CompTIA Network+ N10-007 Acronyms, Ports and Services</h1>
 
+> Sorry, the Network+ site is no longer maintained. Try <a href="https://scubido.github.io">Security+</a>
+<br/>
+<br/>
+
 Go to <a href="#ports">Ports</a>
 , <a href="#services">Services</a>
 , <a href="#readings">further Readings</a>
