added RPC, Diameter, fixed smtp

--- a/index.html
+++ b/index.html
@@ -1056,6 +1056,11 @@ Go to <a href="#ports">Ports</a>
 
    </tr>
    <tr>
+      <td>RPC</td>
+      <td><p class="changeColor">RPC Remote Procedure Call</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Remote_procedure_call">wikipedia</a></td>
+   </tr>
+   <tr>
       <td>RPO</td>
       <td><p class="changeColor">Recovery Point Objective</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Disaster_recovery#Recovery_Point_Objective">wikipedia</a></td>
@@ -1491,7 +1496,7 @@ Go to <a href="#">Top</a>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Telnet">wikipedia</a></td>
    </tr>
    <tr>
-      <td>TCP 25</td>
+      <td>TCP 25/587</td>
       <td><p class="changeColor">SMTP Simple Mail Transfer Protocol</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Simple_Mail_Transfer_Protocol">wikipedia</a></td>
    </tr>
@@ -1539,6 +1544,11 @@ Go to <a href="#">Top</a>
       <td>UDP 123</td>
       <td><p class="changeColor">NTP Network Time Protocol</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Network_Time_Protocol">wikipedia</a></td>
+   </tr>
+   <tr>
+      <td>TCP/UDP 135</td>
+      <td><p class="changeColor">RPC Remote Procedure Call</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Remote_procedure_call">wikipedia</a></td>
    </tr>
    <tr>
       <td>TCP/UDP 137-139</td>
@@ -1640,6 +1650,11 @@ Go to <a href="#">Top</a>
       <td><p class="changeColor">RDP Remote Desktop Protocol</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Remote_Desktop_Protocol">wikipedia</a></td>
    </tr>
+   <tr>
+      <td>TCP 3868</td>
+      <td><p class="changeColor">Diameter</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Diameter_(protocol)">wikipedia</a></td>
+   </tr>
 
 </table>
 </br>
@@ -1679,7 +1694,7 @@ Go to <a href="#">Top</a>
    </tr>
    <tr>
       <td>SMTP Simple Mail Transfer Protocol</td>
-      <td><p class="changeColor">TCP 25</p></td>
+      <td><p class="changeColor">TCP 25/587</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Simple_Mail_Transfer_Protocol">wikipedia</a></td>
    </tr>
    <tr>
@@ -1726,6 +1741,11 @@ Go to <a href="#">Top</a>
       <td>NTP Network Time Protocol</td>
       <td><p class="changeColor">UDP 123</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Network_Time_Protocol">wikipedia</a></td>
+   </tr>
+   <tr>
+      <td>RPC Remote Procedure Call</td>
+      <td><p class="changeColor">TCP/UDP 135</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Remote_procedure_call">wikipedia</a></td>
    </tr>
    <tr>
       <td>NetBIOS Network Basic I/O System</td>
@@ -1826,6 +1846,11 @@ Go to <a href="#">Top</a>
       <td>RDP Remote Desktop Protocol</td>
       <td><p class="changeColor">TCP/UDP 3389</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Remote_Desktop_Protocol">wikipedia</a></td>
+   </tr>
+   <tr>
+      <td>Diameter</td>
+      <td><p class="changeColor">TCP 3868</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Diameter_(protocol)">wikipedia</a></td>
    </tr>
 
 </table>
