--- a/index.html
+++ b/index.html
@@ -1655,6 +1655,11 @@ Go to <a href="#">Top</a>
       <td><p class="changeColor">Diameter</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Diameter_(protocol)">wikipedia</a></td>
    </tr>
+   <tr>
+      <td>TCP 6514</td>
+      <td><p class="changeColor">Syslog over TLS</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Syslog">wikipedia</a></td>
+   </tr>
 
 </table>
 </br>
@@ -1851,6 +1856,11 @@ Go to <a href="#">Top</a>
       <td>Diameter</td>
       <td><p class="changeColor">TCP 3868</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Diameter_(protocol)">wikipedia</a></td>
+   </tr>
+   <tr>
+      <td>Syslog over TLS</td>
+      <td><p class="changeColor">TCP 6514</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Syslog">wikipedia</a></td>
    </tr>
 
 </table>
