--- a/network+/index.html
+++ b/network+/index.html
@@ -1701,7 +1701,7 @@ Go to <a href="#">Top</a>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Telnet">wikipedia</a></td>
    </tr>
    <tr>
-      <td>TCP 25</td>
+      <td>TCP 25/587</td>
       <td><p class="changeColor">SMTP Simple Mail Transfer Protocol</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Simple_Mail_Transfer_Protocol">wikipedia</a></td>
    </tr>
@@ -1754,6 +1754,11 @@ Go to <a href="#">Top</a>
       <td>UDP 123</td>
       <td><p class="changeColor">NTP Network Time Protocol</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Network_Time_Protocol">wikipedia</a></td>
+   </tr>
+   <tr>
+      <td>TCP/UDP 135</td>
+      <td><p class="changeColor">RPC Remote Procedure Call</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Remote_procedure_call">wikipedia</a></td>
    </tr>
    <tr>
       <td>TCP/UDP 137-139</td>
@@ -1855,6 +1860,16 @@ Go to <a href="#">Top</a>
       <td><p class="changeColor">RDP Remote Desktop Protocol</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Remote_Desktop_Protocol">wikipedia</a></td>
    </tr>
+   <tr>
+      <td>TCP 3868</td>
+      <td><p class="changeColor">Diameter</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Diameter_(protocol)">wikipedia</a></td>
+   </tr>
+   <tr>
+      <td>TCP 6514</td>
+      <td><p class="changeColor">Syslog over TLS</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Syslog">wikipedia</a></td>
+   </tr>
 
 </table>
 </br>
@@ -1895,7 +1910,7 @@ Go to <a href="#">Top</a>
    </tr>
    <tr>
       <td>SMTP Simple Mail Transfer Protocol</td>
-      <td><p class="changeColor">TCP 25</p></td>
+      <td><p class="changeColor">TCP 25/587</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Simple_Mail_Transfer_Protocol">wikipedia</a></td>
    </tr>
    <tr>
@@ -1947,6 +1962,11 @@ Go to <a href="#">Top</a>
       <td>NTP Network Time Protocol</td>
       <td><p class="changeColor">UDP 123</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Network_Time_Protocol">wikipedia</a></td>
+   </tr>
+   <tr>
+      <td>RPC Remote Procedure Call</td>
+      <td><p class="changeColor">TCP/UDP 135</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Remote_procedure_call">wikipedia</a></td>
    </tr>
    <tr>
       <td>NetBIOS Network Basic I/O System</td>
@@ -2047,6 +2067,16 @@ Go to <a href="#">Top</a>
       <td>RDP Remote Desktop Protocol</td>
       <td><p class="changeColor">TCP/UDP 3389</p></td>
       <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Remote_Desktop_Protocol">wikipedia</a></td>
+   </tr>
+   <tr>
+      <td>Diameter</td>
+      <td><p class="changeColor">TCP 3868</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Diameter_(protocol)">wikipedia</a></td>
+   </tr>
+   <tr>
+      <td>Syslog over TLS</td>
+      <td><p class="changeColor">TCP 6514</p></td>
+      <td><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Syslog">wikipedia</a></td>
    </tr>
 
 </table>
