--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
          color: #000000;
       }
    </style>
-   
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161206391-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-161206391-1');
+</script>
+
 </head>
 <body>
 <h1 id="acronyms">CompTIA Security+ SY0-501 Acronyms, Ports and Services</h1>
