--- a/network+/index.html
+++ b/network+/index.html
@@ -13,6 +13,15 @@
       }
    </style>
 
+   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161206391-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-161206391-1');
+</script>
+
 </head>
 <body>
 <h1 id="acronyms">CompTIA Network+ N10-007 Acronyms, Ports and Services</h1>
