--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
 Go to <a href="#ports">Ports</a>
 , <a href="#services">Services</a>
- or <a href="#readings">further Readings</a>
+, <a href="#readings">further Readings</a>
+ or <a href="https://scubido.github.io/network+/">Network+</a>
 <br/>
 <br/>
 
