--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 Go to <a href="#ports">Ports</a>
 , <a href="#services">Services</a>
 , <a href="#readings">further Readings</a>
- or <a href="https://scubido.github.io/network+/">Network+</a>
+, <a href="https://scubido.github.io/network+/">Network+</a>
+ or <a href="https://scubido.github.io/hibp/">HIBP hashes download</a>
 <br/>
 <br/>
 
